--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,23 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
+  flutter_native_splash: ^1.3.1
+  flutter_launcher_icons: ^0.9.2
+
+flutter_native_splash:
+    color: "#e3e1da"
+    image: "assets/images/barberLogo.png"
+    android: true
+    ios: true
+
+flutter_icons:
+    image_path: "assets/images/barberLogoIcon.png"
+    ios: true
+    remove_alpha_ios: true
+    android: "laucher_icon"
+    adaptive_icon_background: "#ffffff"
+    adaptive_icon_foreground: "assets/images/barberLogoIcon.png"
+
 
 dev_dependencies:
   flutter_test:
