--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_fonts: ^2.1.0
   flutter_native_splash: ^1.3.1
   flutter_launcher_icons: ^0.9.2
+  scroll_snap_list: ^0.8.4
 
 flutter_native_splash:
     color: "#e3e1da"
