--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.app_barber">
+
+    <!-- Adionar permissão-net -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+    
    <application
-        android:label="app_barber"
+        android:label="BarberShop"
         android:icon="@mipmap/laucher_icon">
         <activity
             android:name=".MainActivity"
