--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_native_splash: ^1.3.1
   flutter_launcher_icons: ^0.9.2
   scroll_snap_list: ^0.8.4
+  story_view: ^0.13.2
+  connectivity: ^3.0.6
 
 flutter_native_splash:
     color: "#e3e1da"
@@ -51,12 +53,12 @@ flutter_native_splash:
     ios: true
 
 flutter_icons:
-    image_path: "assets/images/barberLogoIcon.png"
+    image_path: "assets/images/barberLogoIcon.svg"
     ios: true
     remove_alpha_ios: true
     android: "laucher_icon"
     adaptive_icon_background: "#ffffff"
-    adaptive_icon_foreground: "assets/images/barberLogoIcon.png"
+    adaptive_icon_foreground: "assets/images/barberLogo.svg"
 
 
 dev_dependencies:
